--- a/api/package.json
+++ b/api/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "api",
+  "name": "new_api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "typeorm": "ts-node-dev node_modules/.bin/typeorm"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.18",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
-  },
+  "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pg": "^8.16.0"
   }
 }
